# duckstatsd

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  design.md  docker-entrypoint.sh  pyproject.toml
duckstatsd/: main.py  parser.py  server.py  storage.py
duckstatsd/web/: __init__.py  app.py  database.py
duckstatsd/web/static/: style.css
duckstatsd/web/templates/: base.html  counters.html  dashboard.html  gauges.html  raw.html  sets.html  tag_filter.html  tags.html  timers.html
scripts/: simulate_services.py
