[project]
name = "duckstatsd"
version = "0.1.0"
description = "Fake inspectable StatsD for local development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0.0",
    "plotly[express]>=5.0.0",
]

[project.scripts]
duckstatsd = "duckstatsd.main:main"
duckstatsd-web = "duckstatsd.web.app:main"
